quest-sys/QuEST/QuEST/include/QuEST.h

    
typedef struct {
    char* buffer;       
    int bufferSize;     
    int bufferFill;     
    int isLogging;      
} QASMLogger;
typedef struct ComplexArray
{
    qreal *real; 
    qreal *imag;
} ComplexArray;
 enum pauliOpType {PAULI_I=0, PAULI_X=1, PAULI_Y=2, PAULI_Z=3};
typedef struct ComplexMatrixN
{
  int numQubits;
  qreal **real;
  qreal **imag;
} ComplexMatrixN;
typedef struct PauliHamil 
{
    enum pauliOpType* pauliCodes;
    qreal* termCoeffs;
    int numSumTerms;
    int numQubits;
} PauliHamil;
typedef struct DiagonalOp
{
    int numQubits;
    long long int numElemsPerChunk;
    int numChunks;
    int chunkId;
    qreal *real;
    qreal *imag;
    ComplexArray deviceOperator;
} DiagonalOp;
typedef struct Qureg
{
    int isDensityMatrix;
    int numQubitsRepresented;
    int numQubitsInStateVec;
    long long int numAmpsPerChunk;
    long long int numAmpsTotal;
    int chunkId;
    int numChunks;
    ComplexArray stateVec; 
    ComplexArray pairStateVec;
    ComplexArray deviceStateVec;
    qreal *firstLevelReduction, *secondLevelReduction;
    QASMLogger* qasmLog;
} Qureg;
typedef struct QuESTEnv
{
    int rank;
    int numRanks;
    unsigned long int* seeds;
    int numSeeds;
} QuESTEnv;
ComplexMatrixN createComplexMatrixN(int numQubits);
void initComplexMatrixN(ComplexMatrixN m, qreal real[][1<<m.numQubits], qreal imag[][1<<m.numQubits]);
PauliHamil createPauliHamil(int numQubits, int numSumTerms);
void destroyPauliHamil(PauliHamil hamil);
PauliHamil createPauliHamilFromFile(char* fn);
void initPauliHamil(PauliHamil hamil, qreal* coeffs, enum pauliOpType* codes);
DiagonalOp createDiagonalOpFromPauliHamilFile(char* fn, QuESTEnv env);
void reportPauliHamil(PauliHamil hamil);
qreal calcExpecPauliSum(Qureg qureg, enum pauliOpType* allPauliCodes, qreal* termCoeffs, int numSumTerms, Qureg workspace);
qreal calcExpecPauliHamil(Qureg qureg, PauliHamil hamil, Qureg workspace);
void applyPauliSum(Qureg inQureg, enum pauliOpType* allPauliCodes, qreal* termCoeffs, int numSumTerms, Qureg outQureg);
void applyPauliHamil(Qureg inQureg, PauliHamil hamil, Qureg outQureg);
void applyTrotterCircuit(Qureg qureg, PauliHamil hamil, qreal time, int order, int reps);
void invalidQuESTInputError(const char* errMsg, const char* errFunc);
#define getStaticComplexMatrixN(numQubits, re, im) \
    bindArraysToStackComplexMatrixN( \
        numQubits, \
        (qreal[1<<numQubits][1<<numQubits]) UNPACK_ARR re, \
        (qreal[1<<numQubits][1<<numQubits]) UNPACK_ARR im, \
        (double*[1<<numQubits]) {NULL}, (double*[1<<numQubits]) {NULL} \
    )