quest-sys/src/bindings.rs

extern "C" {
    #[doc = " Initialises a ComplexMatrixN instance to have the passed"]
    #[doc = " \\p real and \\p imag values. This allows succint population of any-sized"]
    #[doc = " ComplexMatrixN, e.g. through 2D arrays:"]
    #[doc = ""]
    #[doc = "     ComplexMatrixN m = createComplexMatrixN(3);"]
    #[doc = "     initComplexMatrixN(m,"]
    #[doc = "         (qreal[8][8]) {{1,2,3,4,5,6,7,8}, {0}},"]
    #[doc = "         (qreal[8][8]) {{0}});"]
    #[doc = ""]
    #[doc = " \\p m can be created by either createComplexMatrixN() or getStaticComplexMatrixN()."]
    #[doc = ""]
    #[doc = " This function is only callable in C, since C++ signatures cannot"]
    #[doc = " contain variable-length 2D arrays"]
    #[doc = ""]
    #[doc = " @ingroup type"]
    #[doc = " @param[in] m the matrix to initialise"]
    #[doc = " @param[in] real matrix of real values; can be 2D array of array of pointers"]
    #[doc = " @param[in] imag matrix of imaginary values; can be 2D array of array of pointers"]
    #[doc = " @throws invalidQuESTInputError()"]
    #[doc = " - if \\p m has not been allocated (e.g. with createComplexMatrixN())"]
    #[doc = " @author Tyson Jones"]
    pub fn initComplexMatrixN(m: ComplexMatrixN, real: *mut *mut f64, imag: *mut *mut f64);
}
extern "C" {
    #[doc = " Dynamically allocates a Hamiltonian expressed as a real-weighted sum of products of Pauli operators."]
    #[doc = ""]
    #[doc = " A ::PauliHamil is merely an encapsulation of the multiple parameters of functions"]
    #[doc = " like applyPauliSum()."]
    #[doc = ""]
    #[doc = " The Pauli operators (PauliHamil.pauliCodes) are all initialised to identity"]
    #[doc = " (::PAULI_I), but the coefficients (PauliHamil.termCoeffs) are not initialised."]
    #[doc = ""]
    #[doc = " The Hamiltonian can be used in functions like applyPauliHamil() and applyTrotterCircuit(),"]
    #[doc = " with \\p Qureg instances of the same number of qubits."]
    #[doc = ""]
    #[doc = " A ::PauliHamil can be modified directly (see ::PauliHamil), or through initPauliHamil()."]
    #[doc = " It can furthermore be created and initialised from a file description directly with"]
    #[doc = " createPauliHamilFromFile()."]
    #[doc = ""]
    #[doc = " > The returned dynamic \\p PauliHamil instance must later be freed via destroyPauliHamil()."]
    #[doc = ""]
    #[doc = " @see"]
    #[doc = " - createPauliHamilFromFile()"]
    #[doc = " - createDiagonalOpFromPauliHamilFile()"]
    #[doc = " - initPauliHamil()"]
    #[doc = " - destroyPauliHamil()"]
    #[doc = " - applyPauliSum()"]
    #[doc = " - applyTrotterCircuit()"]
    #[doc = " - calcExpecPauliHamil()"]
    #[doc = ""]
    #[doc = " @ingroup type"]
    #[doc = " @param[in] numQubits the number of qubits on which this Hamiltonian acts"]
    #[doc = " @param[in] numSumTerms the number of weighted terms in the sum, or the number of Pauli products"]
    #[doc = " @returns a dynamic \\p PauliHamil struct, with fields \\p pauliCodes and \\p termCoeffs stored in the heap"]
    #[doc = " @throws invalidQuESTInputError()"]
    #[doc = " - if \\p numQubits <= 0"]
    #[doc = " - if \\p numSumTerms <= 0"]
    #[doc = " @author Tyson Jones"]
    pub fn createPauliHamil(
        numQubits: ::std::os::raw::c_int,
        numSumTerms: ::std::os::raw::c_int,
    ) -> PauliHamil;
}
extern "C" {
    #[doc = " Destroy a ::PauliHamil instance, created with either createPauliHamil() or createPauliHamilFromFile()."]
    #[doc = ""]
    #[doc = " @ingroup type"]
    #[doc = " @param[in] hamil a dynamic \\p PauliHamil instantiation"]
    #[doc = " @author Tyson Jones"]
    pub fn destroyPauliHamil(hamil: PauliHamil);
}
extern "C" {
    #[doc = " Creates a \\p PauliHamil instance, a real-weighted sum of products of Pauli operators,"]
    #[doc = " populated with the data in filename \\p fn."]
    #[doc = ""]
    #[doc = " Each line in the plaintext file is interpreted as a separate product of Pauli operators"]
    #[doc = " in the total sum."]
    #[doc = " Each line must be a space-separated list with format"]
    #[doc = ""]
    #[doc = "     c p1 p2 p3 ... pN"]
    #[doc = ""]
    #[doc = " where \\p c is the real coefficient of the term, and \\p p1 ... \\p pN are"]
    #[doc = " numbers in <b>{0,1,2,3}</b> to indicate ::PAULI_I, ::PAULI_X, ::PAULI_Y, ::PAULI_Z"]
    #[doc = " operators respectively, which act on qubits \\p 0 through \\p N-1 (all qubits)."]
    #[doc = ""]
    #[doc = " For example, the file containing"]
    #[doc = ""]
    #[doc = "     0.31 1 0 1 2"]
    #[doc = "     -0.2 3 2 0 0"]
    #[doc = ""]
    #[doc = " encodes a two-term four-qubit Hamiltonian"]
    #[doc = " \\f["]
    #[doc = "      0.31 \\, X_0 \\, X_2 \\, Y_3 -0.2 \\, Z_0 \\, Y_1 \\,."]
    #[doc = " \\f]"]
    #[doc = ""]
    #[doc = " The initialised ::PauliHamil can be previewed with reportPauliHamil()."]
    #[doc = ""]
    #[doc = " The number of qubits and terms are inferred from the file."]
    #[doc = " The created Hamiltonian can be used just like one created via createPauliHamil()."]
    #[doc = " It can be modified directly (see ::PauliHamil), or through initPauliHamil()."]
    #[doc = ""]
    #[doc = " > The returned dynamic \\p PauliHamil instance must later be freed via destroyPauliHamil()."]
    #[doc = ""]
    #[doc = " @see"]
    #[doc = " - reportPauliHamil()"]
    #[doc = " - destroyPauliHamil()"]
    #[doc = " - createPauliHamil()"]
    #[doc = " - initPauliHamil()"]
    #[doc = " - createDiagonalOpFromPauliHamilFile()"]
    #[doc = ""]
    #[doc = " @ingroup type"]
    #[doc = " @param[in] fn filename of the plaintext file specifying the pauli operators and coefficients"]
    #[doc = " @returns a dynamic ::PauliHamil struct"]
    #[doc = " @throws invalidQuESTInputError()"]
    #[doc = " - if the file with name \\p fn cannot be read"]
    #[doc = " - if the file is not correctly formatted as described above"]
    #[doc = " @author Tyson Jones"]
    pub fn createPauliHamilFromFile(fn_: *mut ::std::os::raw::c_char) -> PauliHamil;
}
extern "C" {
    #[doc = " Initialise ::PauliHamil instance \\p hamil with the given term coefficients and"]
    #[doc = " Pauli codes (one for every qubit in every term)."]
    #[doc = ""]
    #[doc = " Arguments \\p coeffs and \\p codes encode a weighted sum of Pauli operators, with the same"]
    #[doc = " format as other QuEST functions (like calcExpecPauliSum())."]
    #[doc = ""]
    #[doc = " This is useful to set the elements of the ::PauliHamil in batch. \\n"]
    #[doc = " For example"]
    #[doc = " ```"]
    #[doc = " int numQubits = 3;"]
    #[doc = " int numTerms = 2;"]
    #[doc = " PauliHamil hamil = createPauliHamil(numQubits, numTerms);"]
    #[doc = ""]
    #[doc = " // hamil = 0.5 X0 Y1 - 0.5 Z1 X3"]
    #[doc = " initPauliHamil(hamil,"]
    #[doc = "     (qreal[]) {0.5, -0.5},"]
    #[doc = "     (enum pauliOpType[]) {PAULI_X,PAULI_Y,PAULI_I, PAULI_I, PAULI_Z, PAULI_X});"]
    #[doc = " ```"]
    #[doc = ""]
    #[doc = " The initialised ::PauliHamil can be previewed with reportPauliHamil()."]
    #[doc = ""]
    #[doc = " > \\p hamil must be already created with createPauliHamil(), or createPauliHamilFromFile()."]
    #[doc = ""]
    #[doc = " @see"]
    #[doc = " - reportPauliHamil()"]
    #[doc = " - createPauliHamil()"]
    #[doc = " - createPauliHamilFromFile()"]
    #[doc = ""]
    #[doc = " @ingroup type"]
    #[doc = " @param[in, out] hamil an existing ::PauliHamil instance to be modified"]
    #[doc = " @param[in] coeffs an array of sum term coefficients, which must have length `hamil.numSumTerms`"]
    #[doc = " @param[in] codes a flat array of Pauli codes, of length `hamil.numSumTerms`*`hamil.numQubits`"]
    #[doc = " @throws invalidQuESTInputError()"]
    #[doc = " - if \\p hamil has invalid parameters (\\p numQubits <= 0, \\p numSumTerms <= 0)"]
    #[doc = " - if any code in \\p codes is not a valid Pauli code (::pauliOpType)"]
    #[doc = " @author Tyson Jones"]
    pub fn initPauliHamil(hamil: PauliHamil, coeffs: *mut f64, codes: *mut pauliOpType);
}
